app/baruntravel/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baruntravel-backend-svc
  namespace: baruntravel
  labels:
    app.kubernetes.io/name: baruntravel-backend
    app.kubernetes.io/instance: baruntravel-backend-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: baruntravel-backend-pod
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: baruntravel-frontend-svc
  namespace: baruntravel
  labels:
    app.kubernetes.io/name: baruntravel-frontend
    app.kubernetes.io/instance: baruntravel-frontend-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: baruntravel-frontend-pod
  type: ClusterIP
